@@ -22,7 +22,7 @@ unsigned short s = 0xFFFF;
 void
 testTortureExecute (void)
 {
-#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
+#if !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
   ASSERT (!(foo (s) + 1 != 0));
 #endif
 }
