@@ -1,8 +1,11 @@
 2016-08-23 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/mcs51/gen.h,
-	  src/mcs51/peep.c:
-	  Prepare for long long fix for deadMove() on ret.
+	  src/mcs51/peep.c,
+	  support/regression/tests/gcc-torture-execute-20000314-2.c,
+	  support/regression/tests/gcc-torture-execute-pr42269-2.c,
+	  support/regression/tests/gcc-torture-execute-20060110-2.c:
+	  long long fix for deadMove() on ret.
 
 2016-08-22 Philipp Klaus Krause <pkk AT spth.de>
 
